# DeepResearch

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  prompts.py  state.py  tools.py  workflow.py
src/agents/: feedback_analyzer.py  planner.py  reporter.py  researcher.py
