[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-llm"
version = "0.1.0"
description = "A LangGraph-based multi-agent research workflow system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["langchain", "langgraph", "multi-agent", "research", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "langchain==1.2.11",
    "langchain-core==1.2.18",
    "langchain-openai==1.1.11",
    "langchain-community==0.4.1",
    "langchain-tavily==0.2.17",
    "langgraph==1.1.0",
    "langgraph-prebuilt==1.0.8",
    "python-dotenv==1.2.2",
    "openai==2.26.0",
    "pydantic==2.12.5",
    "requests==2.32.5",
    "arxiv==2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/AGNDM/DeepResearch"
Documentation = "https://github.com/AGNDM/DeepResearch"
Repository = "https://github.com/AGNDM/DeepResearch.git"

[tool.setuptools]
packages = ["src", "src.agents"]

[tool.setuptools.package-data]
src = ["py.typed"]
